# seki

./: .dockerignore  .gitignore  .gitleaks.toml  .golangci.yml  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  concept.md  go.mod  go.sum  seki.yaml.example
.gitea/workflows/: checkov.yml  ci.yaml  gitleaks.yml  semgrep.yml  syft.yml  trivy.yml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
api/: openapi.yaml
benchmarks/k6/: README.md  full-flow.js  token-issuance.js
cmd/seki/: main.go
cmd/seki-cli/: commands.go  main.go  main_test.go  output.go
cmd/seki-migrate/: main.go
docker/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.sqlite.yml  docker-compose.yml  seki-dev.yaml  seki.yaml
docs/: benchmarks.md  ha-guide.md  migration-guide.md  migration-playbook.md  oidc-conformance.md  security-audit.md  standards-compliance.md
internal/admin/: audit.go  audit_seed_test.go  branding.go  branding_test.go  clients.go  clients_test.go  errcodes.go  handler.go  impersonate.go  impersonate_test.go  import.go  import_test.go  (+15 more)
scripts/: sync-github.sh  upload-to-defectdojo.sh
sdks/python/: README.md  pyproject.toml
sdks/python/seki/: __init__.py  client.py  errors.py  types.py
talk/: 2026-03-23-project-kickoff.md  2026-03-23-research-auth-platform-failures.md  2026-03-24-m0-m1-complete.md  2026-03-24-mvp-complete.md  2026-03-24-research-refinement.md  2026-03-24-v03-complete.md  2026-03-24-v10-production-ready.md
terraform/: README.md
(+240 files in other folders)
